# open-agent-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: GENERIC_PARITY_2026-03-31.md  MIGRATION_COVERAGE.md  MIGRATION_COVERAGE.tsv  MIGRATION_FAMILY_CATEGORIES.tsv  MIGRATION_FAMILY_INVENTORY.tsv  MIGRATION_PROTOCOL_INVENTORY.tsv  MIGRATION_SURFACE_INVENTORY.tsv  TERMINAL_FRONTEND_AUDIT_2026-03-31.md  TERMINAL_FRONTEND_AUDIT_2_1_207.md
scripts/: audit-harness.sh  audit-migration-coverage.sh
src/: agents.rs  api.rs  auto_memory.rs  cli.rs  clipboard.rs  command_palette.rs  commands.rs  compact.rs  config.rs  context.rs  context_inspection.rs  control.rs  cron.rs  file_history.rs  fullscreen.rs  hooks.rs  image_processing.rs  input_history.rs  interactions.rs  keybindings.rs  lib.rs  lsp.rs  main.rs  markdown.rs  mcp.rs  mcp_oauth.rs  mcp_server.rs  mcp_websocket.rs  messages.rs  monitor.rs  network_trust.rs  permissions.rs  plan.rs  plugin_manager.rs  plugins.rs  process.rs  prompt.rs  protocol.rs  query.rs  rpc.rs  (+21 more)
src/tools/: ask_user.rs  bash.rs  cron.rs  edit.rs  glob.rs  grep.rs  memory.rs  mod.rs  notebook.rs  read.rs  schema.rs  skill.rs  tasks.rs  team.rs  wakeup.rs  work_items.rs  workflow.rs  write.rs
tests/: agent_flow.rs  cli_interrupt.rs  cli_output.rs  compact_flow.rs  credential_isolation.rs  fullscreen_pty.rs  generic_capabilities.rs  keybindings_pty.rs  plugin_lifecycle.rs  privacy_boundary.rs  protocol_compat.rs  protocol_fail_closed.rs  query_loop.rs  terminal_dialogs.rs  terminal_dialogs_pty.rs  terminal_pty.rs  tool_call_validation.rs  tool_parity.rs  vim_interactions_pty.rs
