[package]
name = "open-agent-harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A provider-neutral Rust coding-agent harness"
license = "MIT"
repository = "https://github.com/Proton1917/open-agent-harness"
readme = "README.md"
keywords = ["agent", "coding-agent", "harness", "llm", "tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "open_agent_harness"
path = "src/lib.rs"

[[bin]]
name = "open-agent-harness"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
futures-util = "0.3"
globset = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
