[package]
name = "open-agent-harness"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "A provider-neutral Rust coding-agent harness"
license = "MIT"
repository = "https://github.com/Proton1917/open-agent-harness"
readme = "README.md"
keywords = ["agent", "coding-agent", "harness", "llm", "tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "open_agent_harness"
path = "src/lib.rs"

[[bin]]
name = "open-agent-harness"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.29"
signal-hook = "0.3"
dirs = "6.0"
fs2 = "0.4"
futures-util = "0.3"
globset = "0.4"
ignore = "0.4"
image = { version = "=0.25.5", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
jsonschema = { version = "0.47", default-features = false }
libc = "0.2"
lopdf = { version = "0.36", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "stream"] }
regex = "1.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
pulldown-cmark = { version = "0.10.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
url = "2.5"
unicode-segmentation = "1.13"
unicode-width = "0.2"
walkdir = "2.5"
webpki-roots = "1.0"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
rcgen = "0.13"
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
